--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formatjs/cli": "^6.2.7",
     "@tanstack/react-query": "^5.17.9",
     "antd": "^5.12.8",
     "react": "^18.2.0",
