--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "@tanstack/react-query": "^5.17.9",
     "antd": "^5.12.8",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-intl": "^6.6.1",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
